# excel-model-eval

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  app.py  main.py  pyproject.toml  reporting.py  requirements.txt  run.sh
.github/workflows/: ci.yml
builder/: __init__.py  assumptions.py  base.py  comps_builder.py  dcf_builder.py  operating_model.py  outputs.py  validators.py
builder/templates/: comps_peers.yaml  dcf_defaults.yaml
docs/: failure_modes.md  transferability.md
eval/llm_rubrics/: reasoning_fidelity.yaml  safety_and_scope.yaml  strategy_quality.yaml
examples/: saas_dcf_walkthrough.py
human_review/: reviewer_guidelines.md
human_review/sample_reviews/: strategist_borderline.md  strategist_fail.md  strategist_good.md
sample_models/: BOBWEIR_Model.xlsx
scripts/: create_sample_model.py
src/: auditor.py  dependency.py  ingestion.py  llm_analyzer.py  reporting.py
tests/: test_comps_builder.py  test_dcf_builder.py  test_operating_model.py  test_smoke.py  test_validators.py
trainer_tasks/: task_1_grade_outputs.md  task_2_identify_failure.md  task_3_prompt_fix.md
