[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "excel-model-eval"
version = "1.0.0"
description = "Structural audit tool for Excel-based financial models using dependency graph analysis and deterministic checks."
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "openpyxl>=3.1.2",
    "pandas>=2.2.0",
    "networkx>=3.2.1",
    "colorama>=0.4.6",
    "numpy>=1.26.0",
    "fpdf>=1.7.2",
    "xlsxwriter>=3.1.9",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
llm = [
    "anthropic>=0.18.0",
    "openai>=1.12.0",
    "python-dotenv>=1.0.0",
]
ui = [
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src", "builder"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
